# STREAM3D

./: .gitignore  README.md  environment.yml  evaluate.sh  pyproject.toml  requirements.inference.txt  requirements.trellis2-backend.txt  requirements.txt  running_sam3d.sh  running_stream3d.sh  running_stream3d_fast.sh  running_stream3d_trellis.sh  running_trellis.sh
_compat/: sitecustomize.py
configs/: base.yaml
configs/backend/: sam3d.yaml  trellis2.yaml
configs/data/: gso.yaml
configs/pipeline/: streaming_sam3d.yaml  trellis2.yaml
configs/streaming/: view_condition_cache.yaml
docs/skills/sam3d-gso-manual-registration/: SKILL.md
sam3d_objects/pipeline/: inference_loader.py  inference_pipeline.py  inference_pipeline_pointmap.py  run_multi_view_stages.py
sam3d_objects/pipeline/multi_view_weighting/: __init__.py  attention.py  fusion.py  injection.py
sam3d_objects/pipeline/utils/: inference_runtime.py  inference_utils.py  layout_post_optimization_utils.py  pointmap.py  (+2 more)
sam3d_objects/pose_align/: pose_optimization.py
sam3d_objects/utils/: coordinate_transforms.py
streaming/: __init__.py  runner.py
streaming/backend/: __init__.py  backend.py  backend_sam3d.py  backend_trellis2.py  config.py  factory.py  selected_chunk_plan.py
streaming/data/: __init__.py  chunks.py  data_gso.py
streaming/scripts/: run_da3_streaming.py
streaming/utils/: streaming_da3.py  streaming_output.py
trellis2/modules/: image_feature_extractor.py
trellis2/pipelines/: base.py  trellis2_image_to_3d.py
trellis2/streaming3d/: export.py  native_state.py  selection.py
(+39 files in other folders)
