[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming3d"
version = "0.1.0"
description = "Streaming3D public inference code for sequential multi-view 3D generation."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["streaming*", "sam3d_objects*", "trellis2*"]
